ros2_ws/log/build_2022-11-24_13-08-07/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/dynepanch/ros2_ws3/ros2_ws/install/mypkg/lib/python3.10/site-packages/mypkg/listener.py", line 18
    if future,done():
             ^
SyntaxError: invalid syntax

